--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,7 @@
   <parent>
     <groupId>org.codehaus.mojo</groupId>
     <artifactId>mojo-parent</artifactId>
-    <version>50</version>
+    <version>61</version>
   </parent>
 
   <artifactId>flatten-maven-plugin</artifactId>
@@ -39,6 +39,7 @@
   </prerequisites>
   <properties>
     <mavenVersion>3.2.5</mavenVersion>
+    <project.build.outputTimestamp>2021-02-28T10:48:48Z</project.build.outputTimestamp>
   </properties>
   <developers>
     <developer>
