Revert "#220 add temporarily remote debug and test just direct dependency test"
This reverts commit f84253521360a24e0a669266dea3056fbd1ecdfc.

--- a/pom.xml
+++ b/pom.xml
@@ -236,14 +236,9 @@
             </executions>
             <configuration>
               <debug>true</debug>
-              <mavenOpts>-Xrunjdwp:transport=dt_socket,server=n,suspend=y,address=5005</mavenOpts>
               <cloneProjectsTo>${project.build.directory}/it</cloneProjectsTo>
               <localRepositoryPath>${project.build.directory}/local-repo</localRepositoryPath>
               <settingsFile>src/it/mrm/settings.xml</settingsFile>
-              <pomIncludes>
-              	<pomInclude>complete-multimodule-parent-pom-direct-dependencies/pom.xml
-              	</pomInclude>
-              </pomIncludes>
               <filterProperties>
                 <repository.proxy.url>${repository.proxy.url}</repository.proxy.url>
               </filterProperties>
@@ -252,7 +247,7 @@
               </properties>
               <goals>
                 <goal>clean</goal>
-                <goal>${project.groupId}:${project.artifactId}:${project.version}:flatten -Drevision=1.2.3.4 -Dmaven.surefire.debug</goal>
+                <goal>${project.groupId}:${project.artifactId}:${project.version}:flatten -Drevision=1.2.3.4</goal>
               </goals>
               <projectsDirectory>src/it/projects</projectsDirectory>
               <postBuildHookScript>verify</postBuildHookScript>
