#220 update the test case parent-with-version-range to flattenDependencyMode all

--- a/src/it/projects/parent-with-version-range/pom.xml
+++ b/src/it/projects/parent-with-version-range/pom.xml
@@ -8,7 +8,18 @@
     <version>[0,2]</version>
   </parent>
 
-  <artifactId>parent-with-version-range</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-
+    <artifactId>parent-with-version-range</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
+  <build>
+    <defaultGoal>verify</defaultGoal>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+          <artifactId>flatten-maven-plugin</artifactId>
+          <configuration>
+            <flattenDependencyMode>all</flattenDependencyMode>
+          </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
