--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,20 +34,12 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2.3.5
 
-      - name: Set up cache for ~./m2/repository
-        uses: actions/cache@v2.1.6
-        with:
-          path: ~/.m2/repository
-          key: maven-${{ matrix.os }}-java${{ matrix.java }}-${{ hashFiles('**/pom.xml') }}
-          restore-keys: |
-            maven-${{ matrix.os }}-java${{ matrix.java }}-
-            maven-${{ matrix.os }}-
-
       - name: Set up JDK
         uses: actions/setup-java@v2.3.1
         with:
           java-version: ${{ matrix.java }}
           distribution: temurin
+          cache: maven
 
       - name: Build with Maven
         run: ./mvnw verify -e -B -V -P run-its
