--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macOS-latest]
-        java: [8, 11, 16, 17-ea]
+        java: [8, 11, 17]
       fail-fast: false
 
     runs-on: ${{ matrix.os }}
