--- a/src/it/projects/flatten-shaded-drp/pom.xml
+++ b/src/it/projects/flatten-shaded-drp/pom.xml
@@ -16,12 +16,12 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
-            <version>16.0.1</version>
+            <version>31.1-jre</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven</groupId>
             <artifactId>maven-archiver</artifactId>
-            <version>2.5</version>
+            <version>3.6.0</version>
         </dependency>
     </dependencies>
 
