--- a/src/it/projects/flatten-dependency-all-resolution-order/pom.xml
+++ b/src/it/projects/flatten-dependency-all-resolution-order/pom.xml
@@ -1,32 +1,34 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>org.codehaus.mojo.flatten.its</groupId>
-    <artifactId>flatten-dependency-all-resolution-order</artifactId>
-    <version>0.0.1-SNAPSHOT</version>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.codehaus.mojo.flatten.its</groupId>
+  <artifactId>flatten-dependency-all-resolution-order</artifactId>
+  <version>0.0.1-SNAPSHOT</version>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.codehaus.mojo.flatten.its</groupId>
-            <artifactId>dep</artifactId>
-            <version>1.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.codehaus.mojo.flatten.its</groupId>
-            <artifactId>test</artifactId>
-            <version>2.0</version>
-        </dependency>
-    </dependencies>
+  <dependencies>
+    <dependency>
+      <groupId>org.codehaus.mojo.flatten.its</groupId>
+      <artifactId>dep</artifactId>
+      <version>1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.mojo.flatten.its</groupId>
+      <artifactId>test</artifactId>
+      <version>2.0</version>
+    </dependency>
+  </dependencies>
 
-    <build>
-        <defaultGoal>verify</defaultGoal>
-        <plugins>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>flatten-maven-plugin</artifactId>
-                <configuration>
-                    <flattenDependencyMode>all</flattenDependencyMode>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+  <build>
+    <defaultGoal>verify</defaultGoal>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>flatten-maven-plugin</artifactId>
+        <version>@project.version@</version>
+        <configuration>
+          <flattenDependencyMode>all</flattenDependencyMode>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
