--- a/src/it/projects/optional-elements-modeOss/pom.xml
+++ b/src/it/projects/optional-elements-modeOss/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <!-- required -->
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.codehaus.mojo.flatten.its</groupId>
@@ -13,6 +13,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
+        <version>@project.version@</version>
         <configuration>
           <flattenMode>oss</flattenMode>
         </configuration>
@@ -23,7 +24,7 @@
   <ciManagement>
     <url>http://localhost</url>
   </ciManagement>
-  
+
   <contributors>
     <contributor>
       <name>Robert Scholte</name>
@@ -31,7 +32,7 @@
   </contributors>
 
   <description>This project contains only required ignorable elements</description>
-  
+
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -39,7 +40,7 @@
         <artifactId>dep</artifactId>
         <version>1.1</version>
       </dependency>
-    </dependencies>    
+    </dependencies>
   </dependencyManagement>
 
   <developers>
@@ -78,14 +79,14 @@
     <artifactId>parent-depMngt</artifactId>
     <version>2</version>
   </parent>
-  
+
   <pluginRepositories>
     <pluginRepository>
       <id>none</id>
       <url>@repository.proxy.url@</url>
     </pluginRepository>
   </pluginRepositories>
-  
+
   <repositories>
     <repository>
       <id>no-one</id>
@@ -96,22 +97,22 @@
   <!-- this one is only required for maven-plugin packaging type -->
   <prerequisites>
     <maven>3.0</maven>
-  </prerequisites>  
+  </prerequisites>
 
   <properties>
     <key>value</key>
   </properties>
-  
+
   <reporting>
     <outputDirectory>target/site</outputDirectory>
   </reporting>
-  
+
   <reports/>
-  
+
   <scm>
     <url>http://svn.codehaus.org/mojo</url>
-  </scm> 
-  
+  </scm>
+
   <url>http://mojo.codehaus.org</url>
   <profiles>
     <profile>
