--- a/src/it/projects/profile-with-deps-import/pom.xml
+++ b/src/it/projects/profile-with-deps-import/pom.xml
@@ -12,6 +12,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
+        <version>@project.version@</version>
       </plugin>
     </plugins>
   </build>
