--- a/src/it/projects/resolve-properties-ci-do-not-interpolate-profile-activation-file/pom.xml
+++ b/src/it/projects/resolve-properties-ci-do-not-interpolate-profile-activation-file/pom.xml
@@ -1,56 +1,57 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.codehaus.mojo.flatten.its</groupId>
-	<artifactId>resolve-properties-ci-do-not-interpolate-profile-activation-file</artifactId>
-	<version>${revision}</version>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
+  <groupId>org.codehaus.mojo.flatten.its</groupId>
+  <artifactId>resolve-properties-ci-do-not-interpolate-profile-activation-file</artifactId>
+  <version>${revision}</version>
 
-	<!-- banned -->
-	<build>
-		<defaultGoal>verify</defaultGoal>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>flatten-maven-plugin</artifactId>
-				<configuration>
-					<flattenMode>resolveCiFriendliesOnly</flattenMode>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+  <!-- banned -->
+  <build>
+    <defaultGoal>verify</defaultGoal>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>flatten-maven-plugin</artifactId>
+        <version>@project.version@</version>
+        <configuration>
+          <flattenMode>resolveCiFriendliesOnly</flattenMode>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 
-	<profiles>
-		<profile>
-			<id>0</id>
-			<activation>
-				<file>
-					<exists>file.txt</exists>
-				</file>
-			</activation>
-		</profile>
-		<profile>
-			<id>1</id>
-			<activation>
-				<file>
-					<exists>${basedir}/file.txt</exists>
-				</file>
-			</activation>
-		</profile>
-		<profile>
-			<id>2</id>
-			<activation>
-				<file>
-					<exists>${any.property}</exists>
-				</file>
-			</activation>
-		</profile>
-		<profile>
-			<id>3</id>
-			<activation>
-				<file>
-					<exists>${revision}</exists>
-				</file>
-			</activation>
-		</profile>
-	</profiles>
+  <profiles>
+    <profile>
+      <id>0</id>
+      <activation>
+        <file>
+          <exists>file.txt</exists>
+        </file>
+      </activation>
+    </profile>
+    <profile>
+      <id>1</id>
+      <activation>
+        <file>
+          <exists>${basedir}/file.txt</exists>
+        </file>
+      </activation>
+    </profile>
+    <profile>
+      <id>2</id>
+      <activation>
+        <file>
+          <exists>${any.property}</exists>
+        </file>
+      </activation>
+    </profile>
+    <profile>
+      <id>3</id>
+      <activation>
+        <file>
+          <exists>${revision}</exists>
+        </file>
+      </activation>
+    </profile>
+  </profiles>
 </project>
