--- a/src/it/projects/bom-pomElements/bom/pom.xml
+++ b/src/it/projects/bom-pomElements/bom/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.codehaus.mojo.flatten.its</groupId>
@@ -8,7 +9,7 @@
   <artifactId>bom</artifactId>
   <packaging>pom</packaging>
   <version>${bom.project.version}</version>
-  
+
   <dependencyManagement>
     <dependencies>
       <!-- BOM of spring boot -->
@@ -79,5 +80,5 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
-  
+
 </project>
