--- a/src/it/projects/cmd-property-substituion/pom.xml
+++ b/src/it/projects/cmd-property-substituion/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.codehaus.mojo.flatten.its</groupId>
   <!-- https://github.com/mojohaus/flatten-maven-plugin/issues/3 -->
@@ -6,7 +7,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>${cmd.test.property}</name>
   <properties>
-     <cmd.test.property>FallbackDefaultValue</cmd.test.property>
+    <cmd.test.property>FallbackDefaultValue</cmd.test.property>
   </properties>
   <build>
     <defaultGoal>verify</defaultGoal>
@@ -14,6 +15,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
+        <version>@project.version@</version>
         <configuration>
           <flattenMode>oss</flattenMode>
         </configuration>
