--- a/src/it/projects/fat-jar/pom.xml
+++ b/src/it/projects/fat-jar/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.codehaus.mojo.flatten.its</groupId>
   <!-- https://github.com/mojohaus/flatten-maven-plugin/issues/47 -->
@@ -27,7 +28,7 @@
   </dependencies>
   <profiles>
     <profile>
-      <id> test2 </id>
+      <id>test2</id>
       <dependencies>
         <dependency>
           <groupId>org.codehaus.mojo.flatten.its</groupId>
@@ -42,6 +43,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
+        <version>@project.version@</version>
         <configuration>
           <flattenMode>fatjar</flattenMode>
         </configuration>
