--- a/src/it/projects/inherit-parent-dependency/pom.xml
+++ b/src/it/projects/inherit-parent-dependency/pom.xml
@@ -1,6 +1,7 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
+
   <parent>
     <groupId>org.codehaus.mojo.flatten.its</groupId>
     <artifactId>parent-deps</artifactId>
@@ -8,5 +9,5 @@
   </parent>
   <artifactId>resolve-properties</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
+
 </project>
