--- a/src/it/projects/inherit-parent-dependencyManagement-cifriendly/pom.xml
+++ b/src/it/projects/inherit-parent-dependencyManagement-cifriendly/pom.xml
@@ -1,42 +1,43 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-	<modelVersion>4.0.0</modelVersion>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>org.codehaus.mojo.flatten.its</groupId>
-		<artifactId>parent-depMngt-properties</artifactId>
-		<version>2</version>
-	</parent>
-	<artifactId>inherit-parent-dependencyManagement-cifriendly</artifactId>
-	<version>${revision}</version>
-	
-	<properties>
-		<test.version>2.0</test.version>
-	</properties>
+  <parent>
+    <groupId>org.codehaus.mojo.flatten.its</groupId>
+    <artifactId>parent-depMngt-properties</artifactId>
+    <version>2</version>
+  </parent>
+  <artifactId>inherit-parent-dependencyManagement-cifriendly</artifactId>
+  <version>${revision}</version>
 
-	<dependencies>
-		<dependency>
-			<groupId>org.codehaus.mojo.flatten.its</groupId>
-			<artifactId>dep</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.codehaus.mojo.flatten.its</groupId>
-			<artifactId>test</artifactId>
-			<version>${test.version}</version>
-			<scope>test</scope>
-		</dependency>
-	</dependencies>
+  <properties>
+    <test.version>2.0</test.version>
+  </properties>
 
-	<build>
-		<defaultGoal>verify</defaultGoal>
-		<plugins>
-			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>flatten-maven-plugin</artifactId>
-				<configuration>
-					<flattenMode>resolveCiFriendliesOnly</flattenMode>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+  <dependencies>
+    <dependency>
+      <groupId>org.codehaus.mojo.flatten.its</groupId>
+      <artifactId>dep</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.codehaus.mojo.flatten.its</groupId>
+      <artifactId>test</artifactId>
+      <version>${test.version}</version>
+      <scope>test</scope>
+    </dependency>
+  </dependencies>
+
+  <build>
+    <defaultGoal>verify</defaultGoal>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>flatten-maven-plugin</artifactId>
+        <version>@project.version@</version>
+        <configuration>
+          <flattenMode>resolveCiFriendliesOnly</flattenMode>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
 </project>
