--- a/src/it/projects/inherit-parent-profile/pom.xml
+++ b/src/it/projects/inherit-parent-profile/pom.xml
@@ -1,6 +1,7 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  
+
   <parent>
     <groupId>org.codehaus.mojo.flatten.its</groupId>
     <artifactId>parent-profile</artifactId>
@@ -8,7 +9,7 @@
   </parent>
   <artifactId>inherit-parent-profile</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
+
   <profiles>
     <profile>
       <id>myprofile</id>
@@ -24,7 +25,7 @@
       </dependencies>
     </profile>
   </profiles>
-  
+
   <!--
   <build>
     <plugins>
@@ -40,5 +41,5 @@
     </plugins>
   </build>
   -->
-  
+
 </project>
