--- a/src/it/projects/jdk-profile-inactive/pom.xml
+++ b/src/it/projects/jdk-profile-inactive/pom.xml
@@ -1,9 +1,10 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.codehaus.mojo.flatten.its</groupId>
   <artifactId>jdk-profile-inactive</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
+
   <profiles>
     <profile>
       <id>jdk</id>
@@ -23,7 +24,7 @@
           <url>@repository.proxy.url@</url>
         </repository>
       </repositories>
-      
+
       <!-- following should be excluded -->
       <build>
         <defaultGoal>verify</defaultGoal>
@@ -57,5 +58,5 @@
       </reporting>
       <reports/>
     </profile>
-  </profiles>  
+  </profiles>
 </project>
