--- a/src/it/projects/profile-with-dependencies-inherit-parent-dependencyManagement/parent/pom.xml
+++ b/src/it/projects/profile-with-dependencies-inherit-parent-dependencyManagement/parent/pom.xml
@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.codehaus.mojo.flatten.its</groupId>
   <artifactId>profile-with-dependencies-inherit-parent-dependencyManagement_parent</artifactId>
@@ -7,13 +8,13 @@
 
 
   <dependencyManagement>
-	<dependencies>
-	    <dependency>
-    	    <groupId>org.codehaus.mojo.flatten.its</groupId>
-            <artifactId>dep</artifactId>
-          	<version>1.1</version>
-        </dependency>
-	</dependencies>
+    <dependencies>
+      <dependency>
+        <groupId>org.codehaus.mojo.flatten.its</groupId>
+        <artifactId>dep</artifactId>
+        <version>1.1</version>
+      </dependency>
+    </dependencies>
   </dependencyManagement>
 
 </project>
