--- a/src/it/projects/profile-with-deps-inherit-parent-depMgmt-flatten-from-parent/pom.xml
+++ b/src/it/projects/profile-with-deps-inherit-parent-depMgmt-flatten-from-parent/pom.xml
@@ -24,6 +24,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
+        <version>@project.version@</version>
       </plugin>
     </plugins>
   </build>
