--- a/src/it/projects/profile-with-deps-inherit-parent-depMgmt-jdk-scope-in-profile/pom.xml
+++ b/src/it/projects/profile-with-deps-inherit-parent-depMgmt-jdk-scope-in-profile/pom.xml
@@ -17,6 +17,7 @@
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>flatten-maven-plugin</artifactId>
+        <version>@project.version@</version>
         <configuration>
           <embedBuildProfileDependencies>true</embedBuildProfileDependencies>
         </configuration>
