--- a/src/it/projects/resolve-properties/pom.xml
+++ b/src/it/projects/resolve-properties/pom.xml
@@ -1,14 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.codehaus.mojo.flatten.its</groupId>
   <artifactId>resolve-properties</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  
+
   <properties>
     <depVersion>1.1</depVersion>
     <utilVersion>3.2.1</utilVersion>
   </properties>
-  
+
   <dependencies>
     <dependency>
       <groupId>org.codehaus.mojo.flatten.its</groupId>
@@ -16,7 +17,7 @@
       <version>${depVersion}</version>
     </dependency>
   </dependencies>
-  
+
   <profiles>
     <profile>
       <activation>
