--- a/pom.xml
+++ b/pom.xml
@@ -28,7 +28,7 @@
   </parent>
 
   <artifactId>flatten-maven-plugin</artifactId>
-  <version>1.3.0</version>
+  <version>1.3.1-SNAPSHOT</version>
   <packaging>maven-plugin</packaging>
 
   <name>Maven Flatten Plugin</name>
@@ -119,12 +119,12 @@
     <connection>scm:git:https://github.com/mojohaus/flatten-maven-plugin.git</connection>
     <developerConnection>scm:git:ssh://git@github.com/mojohaus/flatten-maven-plugin.git</developerConnection>
     <url>https://github.com/mojohaus/flatten-maven-plugin/tree/master</url>
-    <tag>flatten-maven-plugin-1.3.0</tag>
+    <tag>HEAD</tag>
   </scm>
 
   <properties>
     <mavenVersion>3.2.5</mavenVersion>
-    <project.build.outputTimestamp>2022-08-16T21:48:58Z</project.build.outputTimestamp>
+    <project.build.outputTimestamp>2022-08-16T21:49:15Z</project.build.outputTimestamp>
   </properties>
 
   <!-- override versions of some transitive dependencies -->
