--- a/pom.xml
+++ b/pom.xml
@@ -265,6 +265,11 @@
       <build>
         <plugins>
           <plugin>
+            <groupId>org.eclipse.sisu</groupId>
+            <artifactId>sisu-maven-plugin</artifactId>
+            <version>0.3.5</version>
+          </plugin>
+          <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-invoker-plugin</artifactId>
             <executions>
