#220 using the APT processor from the org.eclipse.sisu.inject artifact is faster than using the sisu-maven-plugin

--- a/pom.xml
+++ b/pom.xml
@@ -242,9 +242,15 @@
         <artifactId>maven-checkstyle-plugin</artifactId>
       </plugin>
       <plugin>
-        <groupId>org.eclipse.sisu</groupId>
-        <artifactId>sisu-maven-plugin</artifactId>
-        <version>0.3.5</version>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <dependencies>
+          <dependency>
+            <groupId>org.eclipse.sisu</groupId>
+            <artifactId>org.eclipse.sisu.inject</artifactId>
+            <version>0.3.5</version>
+          </dependency>
+        </dependencies>
       </plugin>
     </plugins>
   </build>
