--- a/pom.xml
+++ b/pom.xml
@@ -271,6 +271,7 @@
           <plugin>
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-invoker-plugin</artifactId>
+            <version>3.5.0</version>
             <executions>
               <execution>
                 <goals>
