--- a/pom.xml
+++ b/pom.xml
@@ -130,6 +130,7 @@
 
   <properties>
     <mavenVersion>3.2.5</mavenVersion>
+    <recommendedJavaBuildVersion>11</recommendedJavaBuildVersion>
     <project.build.outputTimestamp>2022-08-16T21:49:15Z</project.build.outputTimestamp>
   </properties>
 
@@ -227,6 +228,9 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-checkstyle-plugin</artifactId>
+        <configuration>
+          <configLocation>${checkstyle.spotless.config}</configLocation>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -241,7 +245,6 @@
       </plugin>
     </plugins>
   </build>
-
 
   <reporting>
     <plugins>
@@ -259,6 +262,20 @@
   </reporting>
 
   <profiles>
+    <profile>
+      <id>java11+</id>
+      <activation>
+        <jdk>[11,)</jdk>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>com.diffplug.spotless</groupId>
+            <artifactId>spotless-maven-plugin</artifactId>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
     <profile>
       <id>run-its</id>
       <build>
